--- a/ModuleA.ipynb
+++ b/ModuleA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNS55GoFLF2BnuxpKpkdJGw",
+      "authorship_tag": "ABX9TyPCWmWJVK4++MXdRvCXRtKi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,6 @@
         "\n",
         "x = bin(45)\n",
         "print (\"This is how python represents the number 45(base10) in binary: \" + x)\n",
-        "#print(f\"{x:b}\")\n",
         "\n",
         "xb = x[2:]\n",
         "string = f\"45(base10) is {xb} in binary\"\n",
@@ -97,9 +96,7 @@
         "b = 0b111\n",
         "c = a*b\n",
         "\n",
-        "print(f\"{a}({bin(a)}) * {b}({bin(b)}) = {c}({bin(c)})\")\n",
-        "\n",
-        "#print(a*b)"
+        "print(f\"{a}({bin(a)}) * {b}({bin(b)}) = {c}({bin(c)})\")"
       ],
       "metadata": {
         "colab": {
