--- a/ModuleG.ipynb
+++ b/ModuleG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqPVRSGKZT5PC+P9251q5y",
+      "authorship_tag": "ABX9TyNlr3BUCeJ/YqI2yB+iwMXP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,6 +78,7 @@
       "source": [
         "import numpy as np\n",
         "\n",
+        "#Evaluate integral of cosx over [0, pi/2]\n",
         "a = 0\n",
         "b = np.pi/2\n",
         "n = 12\n",
@@ -114,9 +115,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f3ad4862-d58f-4e27-edc9-13e1248b9fd7"
+        "outputId": "8ef3133e-b78f-44be-d7de-ad584c8b9d5a"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +154,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
+        "#Evaluate integral of cosx over [0, pi/2]\n",
         "\n",
         "a = 0\n",
         "b = np.pi/2\n",
@@ -174,9 +175,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "98549372-e525-484c-db63-626b7dc190ce"
+        "outputId": "acc85810-3d2d-46c9-a6de-331d29493916"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
